--- a/.github/workflows/post-article-to-devto.yml
+++ b/.github/workflows/post-article-to-devto.yml
@@ -1,18 +1,36 @@
-name: GitHub Actions Demo
+name: Post Article to Dev.to
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - name: Checkout repository
+        uses: actions/checkout@v2
+  
+      - name: Extract article metadata and content
+        id: extract_article
         run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          TITLE=$(awk -F': ' '/^title:/ {print $2}' article.md | sed 's/"//g')
+          TAGS=$(awk -F': ' '/^tags:/ {print $2}' article.md | sed 's/\[//g' | sed 's/\]//g' | sed 's/, /", "/g' | sed 's/^/["/' | sed 's/$/"]/')
+          PUBLISHED=$(awk -F': ' '/^published:/ {print $2}' article.md)
+          BODY=$(sed -n '/^---$/,/^---$/!p' article.md | sed '1d' | sed '2d')
+  
+          echo "::set-output name=title::$TITLE"
+          echo "::set-output name=tags::$TAGS"
+          echo "::set-output name=published::$PUBLISHED"
+          echo "::set-output name=body::$BODY"
+  
+      - name: Post Article to DEV.to
+        env:
+          API_KEY: ${{ secrets.DEV_TO_API_KEY }}
+        run: |
+          TITLE=${{ steps.extract_article.outputs.title }}
+          TAGS=${{ steps.extract_article.outputs.tags }}
+          PUBLISHED=${{ steps.extract_article.outputs.published }}
+          BODY=${{ steps.extract_article.outputs.body }}
+  
+          curl -X POST -H "Content-Type: application/json" \
+          -H "api-key: $API_KEY" \
+          -d '{"article":{"title":"'"$TITLE"'","body_markdown":"'"$BODY"'","published":'"$PUBLISHED"',"tags":'"$TAGS"'}}' \
+          https://dev.to/api/articles
