--- a/.github/workflows/post-article-to-devto.yml
+++ b/.github/workflows/post-article-to-devto.yml
@@ -19,6 +19,11 @@ jobs:
           PUBLISHED=$(awk -F': ' '/^published:/ {print $2}' article.md)
           BODY=$(sed -n '/^---$/,/^---$/!p' article.md | sed '1d' | sed '2d')
 
+          echo "TITLE: $TITLE"
+          echo "TAGS: $TAGS"
+          echo "PUBLISHED: $PUBLISHED"
+          echo "BODY: $BODY"
+
           echo "::set-output name=title::$TITLE"
           echo "::set-output name=tags::$TAGS"
           echo "::set-output name=published::$PUBLISHED"
@@ -26,12 +31,18 @@ jobs:
 
       - name: Post Article to DEV.to
         env:
-          API_KEY: ${{ secrets.DEV_TO_API_KEY }}
+          API_KEY: ${{DEV_TO_API_KEY}}
         run: |
           TITLE="${{ steps.extract_article.outputs.title }}"
           TAGS="${{ steps.extract_article.outputs.tags }}"
           PUBLISHED="${{ steps.extract_article.outputs.published }}"
           BODY="${{ steps.extract_article.outputs.body }}"
+
+          echo "Posting article to DEV.to..."
+          echo "TITLE: $TITLE"
+          echo "TAGS: $TAGS"
+          echo "PUBLISHED: $PUBLISHED"
+          echo "BODY: $BODY"
 
           curl -X POST -H "Content-Type: application/json" \
             -H "api-key: $API_KEY" \
