--- a/.github/workflows/post-article-to-devto.yml
+++ b/.github/workflows/post-article-to-devto.yml
@@ -1,4 +1,5 @@
 name: Post Article to Dev.to
+
 on:
   push:
     branches:
@@ -11,38 +12,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Extract article metadata and content
-        id: extract_article
+      - name: Set up curl environment
         run: |
-          TITLE=$(awk -F': ' '/^title:/ {print $2}' article.md | sed 's/"//g')
-          TAGS=$(awk -F': ' '/^tags:/ {print $2}' article.md | sed 's/\[//g' | sed 's/\]//g' | sed 's/, /", "/g' | sed 's/^/["/' | sed 's/$/"]/')
-          PUBLISHED=$(awk -F': ' '/^published:/ {print $2}' article.md)
-          BODY=$(sed -n '/^---$/,/^---$/!p' article.md | sed '1d' | sed '2d')
-
-          echo "TITLE: $TITLE"
-          echo "TAGS: $TAGS"
-          echo "PUBLISHED: $PUBLISHED"
-          echo "BODY: $BODY"
-
-          echo "::set-output name=title::$TITLE"
-          echo "::set-output name=tags::$TAGS"
-          echo "::set-output name=published::$PUBLISHED"
-          echo "::set-output name=body::$BODY"
-
-      - name: Post Article to DEV.to
-        env:
-          API_KEY: ${{ secrets.DEV_TO_API_KEY }}
-        run: |
-          TITLE="${{ steps.extract_article.outputs.title }}"
-          TAGS="${{ steps.extract_article.outputs.tags }}"
-          PUBLISHED="${{ steps.extract_article.outputs.published }}"
-          BODY="${{ steps.extract_article.outputs.body }}"
-
-          echo "Posting article to DEV.to..."
-          echo "TITLE: $TITLE"
-          echo "TAGS: $TAGS"
-          echo "PUBLISHED: $PUBLISHED"
-          echo "BODY: $BODY"
+          API_KEY="${{ secrets.DEV_TO_API_KEY }}"
+          TITLE="Title"
+          BODY="Body"
+          TAGS='["discuss", "javascript"]'
+          PUBLISHED=false
 
           curl -X POST -H "Content-Type: application/json" \
             -H "api-key: $API_KEY" \
