--- a/.github/workflows/post-article-to-devto.yml
+++ b/.github/workflows/post-article-to-devto.yml
@@ -28,6 +28,7 @@ jobs:
           echo "TAGS: $TAGS"
           echo "PUBLISHED: $PUBLISHED"
           echo "BODY: $BODY"
+          echo "API_KEY: $API_KEY"
 
           echo "::set-output name=title::$TITLE"
           echo "::set-output name=tags::$TAGS"
@@ -35,8 +36,8 @@ jobs:
           echo "::set-output name=body::$BODY"
 
       - name: Post Article to DEV.to
-        env:
-          API_KEY: ${{ secrets.DEV_TO_API_KEY }}
+        # env:
+        #   API_KEY: ${{ secrets.DEV_TO_API_KEY }}
         run: |
           TITLE="${{ steps.extract_article.outputs.title }}"
           TAGS="${{ steps.extract_article.outputs.tags }}"
