--- a/.github/workflows/post-article-to-devto.yml
+++ b/.github/workflows/post-article-to-devto.yml
@@ -15,20 +15,15 @@ jobs:
       - name: Extract article metadata and content
         id: extract_article
         run: |
-          # Read TITLE from article.md
           TITLE=$(awk -F': ' '/^title:/ {print $2}' article.md | sed 's/"//g')
-          # Read TAGS from article.md and format as JSON array
           TAGS=$(awk -F': ' '/^tags:/ {print $2}' article.md | sed 's/\[//g' | sed 's/\]//g' | sed 's/, /", "/g' | sed 's/^/["/' | sed 's/$/"]/')
-          # Read PUBLISHED from article.md
           PUBLISHED=$(awk -F': ' '/^published:/ {print $2}' article.md)
-          # Read BODY from article.md excluding YAML front matter
           BODY=$(sed -n '/^---$/,/^---$/!p' article.md | sed '1d' | sed '2d')
 
           echo "TITLE: $TITLE"
           echo "TAGS: $TAGS"
           echo "PUBLISHED: $PUBLISHED"
           echo "BODY: $BODY"
-          echo "API_KEY: $API_KEY"
 
           echo "::set-output name=title::$TITLE"
           echo "::set-output name=tags::$TAGS"
@@ -36,8 +31,8 @@ jobs:
           echo "::set-output name=body::$BODY"
 
       - name: Post Article to DEV.to
-        # env:
-        #   API_KEY: ${{ secrets.DEV_TO_API_KEY }}
+        env:
+          API_KEY: ${{ secrets.DEV_TO_API_KEY }}
         run: |
           TITLE="${{ steps.extract_article.outputs.title }}"
           TAGS="${{ steps.extract_article.outputs.tags }}"
