--- a/.github/workflows/post-article-to-devto.yml
+++ b/.github/workflows/post-article-to-devto.yml
@@ -1,4 +1,4 @@
-name: Post ai to Dev.to
+name: Post Article to Dev.to
 
 on:
   push:
@@ -6,23 +6,23 @@ on:
       - main
 
 jobs:
-  post-ai:
+  post-article:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Extract ai metadata and content
-        id: extract_ai
+      - name: Extract article metadata and content
+        id: extract_article
         run: |
-          # Read TITLE from ai.md
-          TITLE=$(awk -F': ' '/^title:/ {print $2}' ai.md | sed 's/"//g')
-          # Read TAGS from ai.md and format as JSON array
-          TAGS=$(awk -F': ' '/^tags:/ {print $2}' ai.md | sed 's/\[//g' | sed 's/\]//g' | sed 's/, /", "/g' | sed 's/^/["/' | sed 's/$/"]/')
-          # Read PUBLISHED from ai.md
-          PUBLISHED=$(awk -F': ' '/^published:/ {print $2}' ai.md)
-          # Read BODY from ai.md excluding YAML front matter
-          BODY=$(sed -n '/^---$/,/^---$/!p' ai.md | sed '1d' | sed '2d')
+          # Read TITLE from article.md
+          TITLE=$(awk -F': ' '/^title:/ {print $2}' article.md | sed 's/"//g')
+          # Read TAGS from article.md and format as JSON array
+          TAGS=$(awk -F': ' '/^tags:/ {print $2}' article.md | sed 's/\[//g' | sed 's/\]//g' | sed 's/, /", "/g' | sed 's/^/["/' | sed 's/$/"]/')
+          # Read PUBLISHED from article.md
+          PUBLISHED=$(awk -F': ' '/^published:/ {print $2}' article.md)
+          # Read BODY from article.md excluding YAML front matter
+          BODY=$(sed -n '/^---$/,/^---$/!p' article.md | sed '1d' | sed '2d')
 
           echo "TITLE: $TITLE"
           echo "TAGS: $TAGS"
@@ -34,16 +34,16 @@ jobs:
           echo "::set-output name=published::$PUBLISHED"
           echo "::set-output name=body::$BODY"
 
-      - name: Post ai to DEV.to
+      - name: Post Article to DEV.to
         env:
           API_KEY: ${{ secrets.DEV_TO_API_KEY }}
         run: |
-          TITLE="${{ steps.extract_ai.outputs.title }}"
-          TAGS="${{ steps.extract_ai.outputs.tags }}"
-          PUBLISHED="${{ steps.extract_ai.outputs.published }}"
-          BODY="${{ steps.extract_ai.outputs.body }}"
+          TITLE="${{ steps.extract_article.outputs.title }}"
+          TAGS="${{ steps.extract_article.outputs.tags }}"
+          PUBLISHED="${{ steps.extract_article.outputs.published }}"
+          BODY="${{ steps.extract_article.outputs.body }}"
 
-          echo "Posting ai to DEV.to..."
+          echo "Posting article to DEV.to..."
           echo "TITLE: $TITLE"
           echo "TAGS: $TAGS"
           echo "PUBLISHED: $PUBLISHED"
@@ -51,5 +51,5 @@ jobs:
 
           curl -X POST -H "Content-Type: application/json" \
             -H "api-key: $API_KEY" \
-            -d '{"ai":{"title":"'"$TITLE"'","body_markdown":"'"$BODY"'","published":'"$PUBLISHED"',"tags":'"$TAGS"'}}' \
-            https://dev.to/api/ais
+            -d '{"article":{"title":"'"$TITLE"'","body_markdown":"'"$BODY"'","published":'"$PUBLISHED"',"tags":'"$TAGS"'}}' \
+            https://dev.to/api/articles
