--- a/.github/workflows/post-article-to-devto.yml
+++ b/.github/workflows/post-article-to-devto.yml
@@ -1,37 +1,23 @@
-name: publish to Dev.to
-on:   
+name: Post Article to Dev.to
+
+on:
   push:
-    paths:
-      - 'posts/**/**.md' # Path for community timeline
-      - 'posts/**/**/**.md' # Path for all posts (yearly)
+    branches:
+      - main
 
 jobs:
-  publish:
+  post-article:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v4.1.6
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-    - name: Setup Node
-      uses: actions/setup-node@v4.0.2
-      with:
-        node-version: 14
-
-    - name: Install Dependencies
-      uses: bahmutov/npm-install@v1.10.2
-
-    - name: Run Prettier (Write)
-      run: yarn run prettier:write
-
-    - name: Run Embedme (Write)
-      run: yarn run embedme:write
-
-    - name: Publish articles on dev.to
-      continue-on-error: true
-      uses: sinedied/publish-devto@v2
-      with:
-        files: 'posts/**/*.md'
-        devto_key: ${{ secrets.DEVTO_TOKEN }}
-        github_token: ${{ secrets.TOKEN }}
-        conventional_commits: true
+    - name: Post article to Dev.to
+      run: |
+        curl -X POST -H "Content-Type: application/json" \
+            -H "api-key: ${{ secrets.DEVTO_API_KEY }}" \
+            -d @/tmp/devtoArticle.md \
+            https://dev.to/api/articles
+      env:
+        DEVTO_API_KEY: ${{ secrets.DEVTO_API_KEY }}
