--- a/.github/workflows/post-article-to-devto.yml
+++ b/.github/workflows/post-article-to-devto.yml
@@ -14,6 +14,13 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v4.1.6
 
+    - name: List files in posts directory
+      run: |
+        echo "Listing files in the posts directory:"
+        ls posts
+        echo "Listing files in subdirectories of posts:"
+        find posts -type f -name "*.md"
+
     - name: Publish articles on dev.to
       continue-on-error: true
       uses: sinedied/publish-devto@v2
